# py-launch-blueprint

./: .codecov.yml  .coderabbit.yaml  .contributors.jsonl  .contributors.yml  .editorconfig  .editorconfig-checker.json  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .pypirc.template  .windsurfrules  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  Dockerfile  EXAMPLECLI.md  EXAMPLEWEB.md  FINDINGS-perf.md  INIT_POST_INIT_ANALYSIS.md  Justfile  LICENSE  Makefile  POST_INIT.md  PROFILE_LOG.md  PROJECTS.md  README.md  RELEASE.md  THE_KNOWLEDGE.md  cog.toml  commitlint.config.mjs  lefthook.yml  llms.txt  mise.toml  package.json  pyproject.toml  pyrightconfig.json  release-please-config.json  (+2 more)
.agents/plugins/: marketplace.json
.cursor/rules/: doc-template.mdc  projectenv.mdc
.devcontainer/: devcontainer.json
.flox/env/: manifest.toml
.github/: CONTRIBUTING.md  SECURITY.md  actionlint.yaml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-feature-request.yml  03-bug-report.yml  config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: _checks.yml  actionlint.yml  api-contract.yml  bandit.yml  blueprint-guard.yml  canary.yml  changelog.yml  ci.yaml  ci.yml  claude-code-review.yml  claude.yml  codeql.yml  codespell.yml  commitlint.yml  dep-audit.yml  dependency-review.yml  difftree.yml  editorconfig-check.yml  experiment-driver.yml  flox-baked-consolidated.yml  flox-baked-image-build.yml  flox-consolidated.yml  flox-mirror-suite.yml  flox-noaction-consolidated.yml  flox-noaction-suite.yml  flox-nocache-consolidated.yml  flox-nocache-suite.yml  init-integration.yml  large-file-guard.yml  lint.yml  manual-pr-security-scan.yml  mise-consolidated.yml  mise-suite.yml  publish.yml  release-please.yml  release.yml  secret-scan.yml  trad-suite.yml  update-contributors.yml  yamllint.yml
.greptile/: config.json  rules.md
.windsurf/rules/: justfile-rules.md
docs/: Makefile  POST_INIT.md  README.md  RELEASE.md
docs/adr/: 0001-app-short-name-plbp.md  0005-mise-flox-first-class-toolchains.md  0005-stable-error-codes-hints-crash-log.md  0005-web-service-best-practices.md  0006-did-you-mean-stdlib-difflib.md  0006-web-service-best-practices.md  0007-pager-for-long-text-output.md  0008-config-init-and-first-run-hint.md  0009-rich-row-variant-on-result-models.md  0010-windows-native-paths-xdg-overrides.md  0011-doctor-bundle-redact-at-collection.md  0012-flox-environment-management.md  0014-app-short-name-placeholder.md  0015-app-short-name-placeholder.md  0017-hexagonal-core-and-boundary-enforcement.md  0017-hook-ci-parity-and-boundary-gate.md  0017-testing-strategy-and-tooling.md  0018-hook-ci-parity-and-boundary-gate.md  0018-testing-strategy-and-tooling.md  0019-testing-strategy-and-tooling.md  README.md
docs/api/: openapi.json
docs/design/: 0001-plbp-cli-conventions.md  0002-web-api-conventions.md  0003-logging-conventions.md  0005-hexagonal-architecture-and-enforcement.md  0005-template-press-tui-design.md  README.md
docs/research/: 0003-init-post-init-analysis.md  0004-template-press-dogfood-log.md  README.md
docs/source/: conf.py  docs.md  index.md
docs/source/about/: design_decisions.md  (+2 more)
experiment/: FINDINGS.md  PROFILING.md  README.md  analyze.py  infographic.py  last_run_totals.py  mise.toml  visualize.py  visualize_v2.py
experiment/bench/: aggregate.py  charts.py  collect.py  report.py  stats.py
experiment/fixtures/: synthetic_runs.json
experiment/flox-ci-base/: Dockerfile  Dockerfile.full  README.md  consumer-ci-baked.yml  smoke-test.sh
experiment/profiling/: analyze.py  profile-flox.sh
experiment/results/: LAST_RUN_TOTALS.md  REPORT.md  results.csv  results.json  run-ids-stage1-ubuntu.json  run-ids-stage2-macos.json  run-ids-stage3-all.json  run-ids-stage3-macos-g1.json  run-ids-stage3-macos-g2.json  run-ids-stage3-ubuntu.json  run-ids-v3-reps1.json
experiment/results-sample/: REPORT.md  results.csv  results.json
init/: INIT_POST_INIT_ANALYSIS.md  README.md  TEMPLATE_PRESS_PLAN.md  _engine.py  _rewriters.py  common.py  discover.py  guard.sh  init-spec.md  init.py  init_doctor.py  manifest.toml  post_init.py  setup-pypi-publishing.sh
init/ci/: check_guard_wiring.py  check_manifest_drift.py  check_path_filter.py
init/skill/: README.md
init/tests/: conftest.py  test_conftest_guard.py  test_cross_language_drift.py  test_doctor.py  test_doctor_post_init.py  test_drift_per_field.py  test_manifest.py  test_modes.py  test_post_init.py
plugins/astral/: LICENSE-APACHE  README.md
projects/: P01-init-rebrand-robustness.md  P02-repo-simplification.md  P03-type-precision-uplevel.md  P04-py-api-boundary-validation-.md  P04-py-api-boundary-validation.md
prototypes/press_tui/: decisions.py  interview.py
py_launch_blueprint/: _version.py
research/: CLAUDE.md
research/reference/: python-typing-ty-2026-07-18.md
scripts/: check-gitleaks.sh  export_openapi.py  install-actionlint.sh  install-gitleaks.sh  install-lefthook.sh  update_contributors.py
skill/: README.md  SKILL.md
skill/optimization-workspace/: RESULTS.md  eval_v3.json  trigger_eval.json  trigger_eval_v2.json  trigger_eval_v3.json
src/py_launch_blueprint/: __init__.py  composition.py  projects.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_contributors_render.py  test_contributors_state.py  test_contributors_workflow.py  test_justfile.py  test_output.py  test_project_infrastructure.py  test_version_consistency.py
tests/cli/: test_help_snapshots.py  test_pylb.py
tests/core/: test_core.py  test_format.py  test_logging.py  test_paths.py  test_projects_repository_contract.py  test_projects_service.py  test_properties.py  test_py_api_repository.py
tests/experiment/: test_aggregate.py  test_analyze_profile.py  test_collect.py  test_report.py  test_stats.py
tests/meta/: test_codex_astral_plugin.py  test_security_workflow_visibility.py  test_version_consistency.py
tests/web/: test_app.py  test_idempotency.py  test_logging.py  test_openapi_schema.py  test_openapi_snapshot.py  test_settings.py
(+105 files in other folders)
