# Copyright (c) 2025, Steve Morin
#
# Permission is hereby granted, free of charge, to any person obtaining a copy of
# this software and associated documentation files (the "Software"), to deal in
# the Software without restriction, including without limitation the rights to
# use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
# the Software, and to permit persons to whom the Software is furnished to do so,
# subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
# FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
# COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
# IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
# CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

[project]
name = "py_launch_blueprint"
version = "0.0.1"
description = "CLI tools for interacting with Py, including project search functionality"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Steve Morin", email = "steve.morin@gmail.com" }]
dependencies = [
  "click>=8.1.0",
  "questionary>=2.0.0",
  "python-dotenv>=1.0.0",
  "thefuzz>=0.19.0",
  "python-Levenshtein>=0.21.0", # For better performance with thefuzz
  "pyperclip>=1.8.0",
  "requests>=2.31.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.1.0",
  "mypy>=1.0.0",
  "ruff>=0.1.0",
  "pre-commit>=4.1.0",
  "types-requests",
  "types-Pygments",
  "cogapp",
]

docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme",
  "furo",
  "myst-parser",
  "sphinx-autodoc-typehints",
  "cogapp",
  "sphinx-copybutton",
  "sphinx-autobuild",
  "sphinxext-opengraph",      # https://github.com/wpilibsuite/sphinxext-opengraph
]


[project.scripts]
py-projects = "py_launch_blueprint.projects:main"

# ITM-072 — package metadata URLs (round 19).
[project.urls]
Homepage = "https://github.com/smorinlabs/py-launch-blueprint"
Repository = "https://github.com/smorinlabs/py-launch-blueprint"
Documentation = "https://py-launch-blueprint.readthedocs.io/en/latest/"
Changelog = "https://github.com/smorinlabs/py-launch-blueprint/blob/main/CHANGELOG.md"
Issues = "https://github.com/smorinlabs/py-launch-blueprint/issues"

[build-system]
requires = ["hatchling", "hatch-vcs", "setuptools>=64", "setuptools-scm>=8"]
build-backend = "hatchling.build"

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "py_launch_blueprint"
module-root = ""

[tool.ruff]
# Target Python Version
target-version = "py310"


# Line length
line-length = 88

lint.select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "RUF", # Ruff-specific rules
  "W",   # pycodestyle warnings
  "YTT", # flake8-2020
  "S",   # flake8-bandit
]

# Ignore specific rules
lint.ignore = [
  # "E501",  # line length violations
]

# Allow autofix behavior for specific rules
fix = true
lint.unfixable = [] # Rules that should not be fixed automatically

# Exclude files/folders
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "docs/source/conf.py",
  "py_launch_blueprint/_version.py",
]
# Per-file-ignores
[tool.ruff.lint.pycodestyle]
max-line-length = 88
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]             # Ignore unused imports in __init__.py files
"tests/*" = ["S101", "S105", "S106"] # Ignore assert statements in tests
# S101: This check flags the use of assert statements. The reason is that assert statements are removed when Python code is optimized (run with the -O flag), which can lead to security vulnerabilities if assert is used for security checks.
# S105: This generally flags hardcoded password strings in code.
# S106: This generally flags hardcoded password variables in code.

[tool.codespell]
skip = ".git,.venv,.mypy_cache,.pytest_cache,.ruff_cache,analysis,build,dist,docs/build,htmlcov,uv.lock,*.egg-info"
ignore-words-list = "pyproject,pyright,pyrightconfig,pyperclip,thefuzz,cogapp,smorin,pylance"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Marker taxonomy (ITM-046, round-9 decision).
# `live` = requires external services; `slow` = takes >1s.
# Default `addopts` excludes both — run full suite with `pytest -m ""`.
markers = [
    "live: requires external services",
    "slow: takes >1s",
]
addopts = "-m 'not live and not slow'"
strict_markers = true

# ITM-015 — codespell. US English baseline (default builtin="clear,rare"); empty
# ignore list — add terms only when intentional. Decided round 9.
[tool.codespell]
skip = ".git,.venv,build,dist,node_modules,uv.lock,bun.lock,*.lock,docs/_build,*.svg,*.cast,.ruff_cache,.pytest_cache,.mypy_cache,.ty_cache"
ignore-words-list = ""
check-filenames = true
check-hidden = false

[tool.mypy]
# Python version
python_version = "3.10"

# Strict mode
strict = true

# Imports management
ignore_missing_imports = false
follow_imports = "normal"
follow_imports_for_stubs = true

# Disallow dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# None and Optional handling
no_implicit_optional = true
strict_optional = true

# Warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Error messages
pretty = true
show_error_codes = true
show_column_numbers = true

# Per-module settings example
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
