# Copyright (c) 2025, Steve Morin
#
# Permission is hereby granted, free of charge, to any person obtaining a copy of
# this software and associated documentation files (the "Software"), to deal in
# the Software without restriction, including without limitation the rights to
# use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
# the Software, and to permit persons to whom the Software is furnished to do so,
# subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
# FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
# COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
# IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
# CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

[project]
name = "py_launch_blueprint"
# ITM-070 — static version (ADR-06 cutover). release-please bumps this.
version = "1.1.3"
description = "CLI tools for interacting with Py, including project search functionality"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"  # PEP 639 license expression (ITM-070, round-19).
authors = [{ name = "Steve Morin", email = "steve.morin@gmail.com" }]
classifiers = [
  # ITM-070 — round-19. py3.12+ only (per ITM-033 floor); MIT classifier
  # intentionally omitted (PEP 639 license expression above is the single
  # source of truth — duplication would drift).
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click>=8.1.0",
  "questionary>=2.0.0",
  "python-dotenv>=1.0.0",
  "thefuzz>=0.19.0",
  "python-Levenshtein>=0.21.0", # For better performance with thefuzz
  "pyperclip>=1.8.0",
  "requests>=2.31.0",
  "rich>=13.0.0",
]

# ITM-063 — PEP 735 dependency-groups (round-13 decision). Replaces
# [project.optional-dependencies] dev+docs. Install via `uv sync --group <name>`.
[dependency-groups]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.1.0",
  "mypy>=1.0.0",
  "ty>=0.0.1a16",  # per ADR-03 (pre-1.0; bump as needed)
  "ruff>=0.1.0",
  "types-requests",
  "types-Pygments",
  "cogapp",
]

docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme",
  "furo",
  "myst-parser",
  "sphinx-autodoc-typehints",
  "cogapp",
  "sphinx-copybutton",
  "sphinx-autobuild",
  "sphinxext-opengraph",      # https://github.com/wpilibsuite/sphinxext-opengraph
]


[project.scripts]
py-projects = "py_launch_blueprint.projects:main"

# ITM-072 — package metadata URLs (round 19).
[project.urls]
Homepage = "https://github.com/smorinlabs/py-launch-blueprint"
Repository = "https://github.com/smorinlabs/py-launch-blueprint"
Documentation = "https://py-launch-blueprint.readthedocs.io/en/latest/"
Changelog = "https://github.com/smorinlabs/py-launch-blueprint/blob/main/CHANGELOG.md"
Issues = "https://github.com/smorinlabs/py-launch-blueprint/issues"

# ITM-073 — uv_build (ADR-06 cutover; replaces Hatchling + hatch-vcs).
[build-system]
requires = ["uv_build>=0.5,<1.0"]
build-backend = "uv_build"

# ITM-074 — uv_build module configuration.
# Template uses a flat layout (package at repo root, not src/) — must set
# module-root = "" so uv_build doesn't expect src/py_launch_blueprint/.
[tool.uv.build-backend]
module-name = "py_launch_blueprint"
module-root = ""

[tool.ruff]
# ITM-018 reconciled config (round-2). Merge: template's stricter rule
# selection + source's ignore rationale. target-version reflects ITM-033
# Python-floor bump.
target-version = "py312"
line-length = 88

lint.select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "RUF", # Ruff-specific rules
  "W",   # pycodestyle warnings
  "YTT", # flake8-2020
  "S",   # flake8-bandit
]

# Source's ignore rationale (round-2): line-length handled by formatter;
# template-applicable subset adopted (B904/B007 omitted — source-specific
# patterns that don't apply here).
lint.ignore = [
  "E501",  # line too long (formatter owns this)
  "W293",  # whitespace on blank line (formatter owns trim_trailing)
]

# Allow autofix behavior for specific rules
fix = true
lint.unfixable = [] # Rules that should not be fixed automatically

# Exclude files/folders
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "docs/source/conf.py",
  "py_launch_blueprint/_version.py",
]
# Per-file-ignores
[tool.ruff.lint.pycodestyle]
max-line-length = 88
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]             # Ignore unused imports in __init__.py files
"tests/*" = ["S101", "S105", "S106"] # Ignore assert statements in tests
"init/tests/**" = ["S101", "S105", "S106"]   # same exemption — pytest convention
"init/**" = ["S603", "S607"]                  # init/ wraps gh/just/uv via subprocess; that's the point
"skill/**" = ["S101"]                         # skill/ has illustrative example assertions in markdown
# S101: assert statements removed under -O — security risk if assert is the only gate.
# S105/S106: hardcoded password strings/variables in code.
# S603/S607: subprocess module use + partial-path executables — init/ tooling wraps gh/just/uv intentionally.

# ITM-018 — explicit format config (round-2; mirrors source). Values match Ruff
# defaults but being explicit prevents silent drift if defaults change.
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ITM-027 — bandit config (round 3). Tests legitimately use `assert`
# (pytest convention) — exclude_dirs covers tests/.
[tool.bandit]
exclude_dirs = ["tests", "init/tests", ".venv", "build", "dist"]
skips = []  # No global skips; add with rationale only.

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Marker taxonomy (ITM-046, round-9 decision).
# `live` = requires external services; `slow` = takes >1s.
# Default `addopts` excludes both — run full suite with `pytest -m ""`.
markers = [
    "live: requires external services",
    "slow: takes >1s",
]
addopts = "-m 'not live and not slow'"
strict_markers = true

# ITM-015 — codespell. US English baseline (default builtin="clear,rare"); empty
# ignore list — add terms only when intentional. Decided round 9.
[tool.codespell]
skip = ".git,.venv,build,dist,node_modules,uv.lock,bun.lock,*.lock,docs/_build,*.svg,*.cast,.ruff_cache,.pytest_cache,.mypy_cache,.ty_cache,*.log,skill/optimization-workspace"
# *.log + skill/optimization-workspace: optimizer logs contain LLM-truncated
# text artifacts that aren't real typos; skip the whole tree.
ignore-words-list = "ans"
# ans: variable name used in prompt-handling code; codespell wants to "fix"
# it to "and". Whitelist to keep the short variable name.
check-filenames = true
check-hidden = false

[tool.mypy]
# Python version (ITM-033 — moves to 3.12; mypy block removed entirely
# once ITM-026 ty switch lands).
python_version = "3.12"

# Strict mode
strict = true

# Imports management
ignore_missing_imports = false
follow_imports = "normal"
follow_imports_for_stubs = true

# Disallow dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# None and Optional handling
no_implicit_optional = true
strict_optional = true

# Warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Error messages
pretty = true
show_error_codes = true
show_column_numbers = true

# Per-module settings example
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
